Fix create post
