# routers/PostsRouter.ts
@@ -1,12 +1,25 @@
 import { Router } from 'express';
-import PostsController, { upload }  from '../controllers/PostsController';
+import PostsController  from '../controllers/PostsController';
 import { authMiddleware } from '../middleware/AuthMiddleware';
 import bodyParser from 'body-parser';
+import multer from 'multer';
+import path from 'path';
+import { v4 } from 'uuid';
 
 const router = Router();
 
-router.post('/create', authMiddleware, PostsController.createPost);
-router.post('/createTest', upload.single('video'), bodyParser.urlencoded({ extended: true }), authMiddleware, PostsController.createTestPost);
+const storage = multer.diskStorage({
+  destination: (req, file, cb) => {
+    cb(null, path.join(__dirname, '../videos'));
+  },
+  filename: (req, file, cb) => {
+    cb(null, `${v4()}_${file.originalname}`);
+  },
+});
+
+export const upload = multer({ storage });
+
+router.post('/create', upload.single('video'), bodyParser.urlencoded({ extended: true }), authMiddleware, PostsController.createPost);
 router.get('/', PostsController.getPosts);
 
 export default router;
